most of the hammeregg desktop net code
Signed-off-by: Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>

--- a/hammer/Cargo.toml
+++ b/hammer/Cargo.toml
@@ -1,7 +1,11 @@
 cargo-features = ["strip"]
 
 [workspace]
-members = [ "hammeregg_backend" ]
+members = [
+    "hammeregg_core",
+    "hammeregg_backend",
+    "hammeregg_rooster"
+]
 
 [profile.release]
 lto = true
