--- a/egg/package.json
+++ b/egg/package.json
@@ -11,11 +11,17 @@
     "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.16"
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "ansi-regex": "5.0.1",
     "set-value": "4.0.1"
   },
-  "packageManager": "yarn@3.0.2"
+  "packageManager": "yarn@3.0.2",
+  "dependencies": {
+    "bson": "^4.5.3",
+    "range_check": "^2.0.4",
+    "ts-state-machines": "^1.0.3"
+  }
 }
