--- a/hammer/hammeregg_backend/Cargo.toml
+++ b/hammer/hammeregg_backend/Cargo.toml
@@ -13,6 +13,9 @@ hammeregg_core = { path = "../hammeregg_core" }
 names = { git = "https://github.com/fnichol/names", rev = "630a946" }
 rand_chacha = "0.3.1"
 rsa = "0.5.0"
-tokio = { version = "1.11.0", default-features = false, features = ["rt"] }
-tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
+rustls-pemfile = "0.2.1"
+tokio = { version = "1.11.0", default-features = false, features = ["fs", "rt"] }
+tokio-rustls = "0.23.0"
+tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls-webpki-roots"] }
 url = "2.2.2"
+webpki-roots = "0.22.1"
