--- a/hammer/hammeregg_rooster/Cargo.toml
+++ b/hammer/hammeregg_rooster/Cargo.toml
@@ -10,5 +10,7 @@ clap = "3.0.0-beta.4"
 futures = "0.3.17"
 hammeregg_core = { path = "../hammeregg_core" }
 parking_lot = "0.11.2"
+rustls-pemfile = "0.2.1"
 tokio = { version = "1.11.0", default-features = false, features = ["macros", "rt-multi-thread"] }
-tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
+tokio-rustls = "0.23.0"
+tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls-webpki-roots"] }
