--- a/hammer/hammeregg_rooster/Cargo.toml
+++ b/hammer/hammeregg_rooster/Cargo.toml
@@ -9,7 +9,9 @@ anyhow = "1.0.44"
 clap = "3.0.0-beta.4"
 futures = "0.3.17"
 hammeregg_core = { path = "../hammeregg_core" }
+log = "0.4.14"
 parking_lot = "0.11.2"
+pretty_env_logger = "0.4.0"
 rustls-pemfile = "0.2.1"
 tokio = { version = "1.11.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tokio-rustls = "0.23.0"
