--- a/egg/package.json
+++ b/egg/package.json
@@ -21,6 +21,7 @@
   "packageManager": "yarn@3.0.2",
   "dependencies": {
     "bson": "^4.5.3",
+    "jsencrypt": "^3.2.1",
     "range_check": "^2.0.4",
     "ts-state-machines": "^1.0.3"
   }
