--- a/egg/package.json
+++ b/egg/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "ansi-html": "patch:ansi-html@0.0.7#.yarn/patches/ansi-html-community.patch",
     "autoprefixer": "^10.3.7",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^2.2.16",
@@ -21,7 +21,6 @@
   "packageManager": "yarn@3.0.2",
   "dependencies": {
     "bson": "^4.5.3",
-    "jsencrypt": "^3.2.1",
     "range_check": "^2.0.4",
     "ts-state-machines": "^1.0.3"
   }
