--- a/hammer/hammeregg_backend/Cargo.toml
+++ b/hammer/hammeregg_backend/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
 edition = "2021"
 
 [dependencies]
+aes-gcm = "0.9.4"
 anyhow = "1.0.44"
 atomic_refcell = "0.1.8"
 bson = "2.0.0"
@@ -17,6 +18,7 @@ rfd = "0.5.1"
 rsa = "0.5.0"
 rustls-pemfile = "0.2.1"
 serde = { version = "1.0.130", features = ["derive"] }
+sha2 = "0.9.8"
 tokio = { version = "1.11.0", default-features = false, features = ["fs", "rt"] }
 tokio-rustls = "0.23.0"
 tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls-webpki-roots"] }
