--- a/hammer/hammeregg_backend/Cargo.toml
+++ b/hammer/hammeregg_backend/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.44"
 atomic_refcell = "0.1.8"
 bson = "2.0.0"
 eframe = "0.15.0"
+enigo = "0.0.14"
 futures = "0.3.17"
 hammeregg_core = { path = "../hammeregg_core" }
 names = { git = "https://github.com/fnichol/names", rev = "630a946" }
@@ -24,4 +25,5 @@ tokio-rustls = "0.23.0"
 tokio-tungstenite = { version = "0.16.0", features = ["rustls-tls-webpki-roots"] }
 url = "2.2.2"
 webpki-roots = "0.22.1"
+winit = "0.25.0"
 zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
